Follow-up strings fix for bug 562790. r=Unfocused, a=blocks-beta7
UltraBlame original commit: bcca2c0c4805b71367bdfd7deeb851111559cdbf

--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.properties
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.properties
@@ -1248,6 +1248,24 @@ Purchase
 for
 %
 S
+addon
+.
+purchase
+.
+tooltip
+=
+Visit
+the
+add
+-
+ons
+gallery
+to
+purchase
+this
+add
+-
+on
 #
 LOCALIZATION
 NOTE
@@ -1290,3 +1308,10 @@ Purchase
 for
 %
 S
+cmd
+.
+purchaseAddon
+.
+accesskey
+=
+u
