Bug 574688 - replace the status bar with the addon bar (r=mano, a=blocking-beta7)
UltraBlame original commit: bb2db707bfcb36dd0f5d910484f5202564991807

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -759,18 +759,20 @@ Items
 <
 !
 ENTITY
-taskbarCmd
+addonBarCmd
 .
 label
 "
-Status
+Add
+-
+on
 Bar
 "
 >
 <
 !
 ENTITY
-taskbarCmd
+addonBarCmd
 .
 accesskey
 "
