--- a/browser/locales/en-US/chrome/browser/pageReportFirstTime.dtd
+++ b/browser/locales/en-US/chrome/browser/pageReportFirstTime.dtd
@@ -1,7 +1,7 @@
 <
 !
 ENTITY
-startDescription
+startDescriptionText
 .
 label
 "
@@ -32,25 +32,6 @@ pop
 -
 up
 window
-.
-Whenever
-&
-brandShortName
-;
-blocks
-these
-pop
--
-ups
-you
-will
-see
-an
-icon
-on
-the
-status
-bar
 .
 "
 >
