--- a/browser/locales/en-US/chrome/browser/search.properties
+++ b/browser/locales/en-US/chrome/browser/search.properties
@@ -4,6 +4,42 @@ Search
 using
 %
 S
+#
+LOCALIZATION
+NOTE
+(
+cmd_pasteAndSearch
+)
+:
+"
+Search
+"
+is
+a
+verb
+this
+is
+the
+#
+search
+bar
+equivalent
+to
+the
+url
+bar
+'
+s
+"
+Paste
+&
+Go
+"
+cmd_pasteAndSearch
+=
+Paste
+&
+Search
 cmd_clearHistory
 =
 Clear
