Bug 588292 - Remove site-supplied text for beforeunload and onunload dialogs, and improve button text. r=jst, ui-r=limi, a=blocking
UltraBlame original commit: 03ef56304b2df1e58595025a4e82783a244f82c6

--- a/dom/locales/en-US/chrome/dom/dom.properties
+++ b/dom/locales/en-US/chrome/dom/dom.properties
@@ -550,35 +550,45 @@ opened
 by
 script
 .
-OnBeforeUnloadPreMessage
+OnBeforeUnloadTitle
 =
 Are
 you
 sure
+?
+OnBeforeUnloadMessage
+=
+This
+page
+is
+asking
+you
+to
+confirm
+that
 you
 want
 to
-navigate
-away
-from
-this
-page
-?
-OnBeforeUnloadPostMessage
-=
-Press
-OK
-to
-continue
-or
-Cancel
-to
-stay
-on
-the
-current
-page
+leave
+-
+data
+you
+have
+entered
+may
+not
+be
+saved
 .
+OnBeforeUnloadStayButton
+=
+Stay
+on
+Page
+OnBeforeUnloadLeaveButton
+=
+Leave
+Page
 DocumentAllUsed
 =
 Non
