Backout of bug 574688 due to test failure, a=backout.
UltraBlame original commit: f86e1746ac0d9f59452b7a74ab39293eb82db496

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -759,20 +759,18 @@ Items
 <
 !
 ENTITY
-addonBarCmd
+taskbarCmd
 .
 label
 "
-Add
--
-on
+Status
 Bar
 "
 >
 <
 !
 ENTITY
-addonBarCmd
+taskbarCmd
 .
 accesskey
 "
