--- a/browser/locales/en-US/chrome/browser/browser.properties
+++ b/browser/locales/en-US/chrome/browser/browser.properties
@@ -897,6 +897,20 @@ pop
 ups
 are
 blocked
+popupWarningDontShowFromStatusbar
+=
+Don
+'
+t
+show
+info
+message
+when
+pop
+-
+ups
+are
+blocked
 popupShowPopupPrefix
 =
 Show
