--- a/browser/locales/en-US/chrome/browser/preferences/advanced-scripts.dtd
+++ b/browser/locales/en-US/chrome/browser/preferences/advanced-scripts.dtd
@@ -496,3 +496,49 @@ accesskey
 D
 "
 >
+<
+!
+ENTITY
+hideStatusBar
+.
+label
+"
+Hide
+the
+status
+bar
+"
+>
+<
+!
+ENTITY
+hideStatusBar
+.
+accesskey
+"
+H
+"
+>
+<
+!
+ENTITY
+changeStatusBar
+.
+label
+"
+Change
+status
+bar
+text
+"
+>
+<
+!
+ENTITY
+changeStatusBar
+.
+accesskey
+"
+C
+"
+>
