--- a/browser/locales/en-US/chrome/browser/pageReportFirstTime.dtd
+++ b/browser/locales/en-US/chrome/browser/pageReportFirstTime.dtd
@@ -1,7 +1,7 @@
 <
 !
 ENTITY
-startDescriptionText
+startDescription
 .
 label
 "
@@ -32,6 +32,25 @@ pop
 -
 up
 window
+.
+Whenever
+&
+brandShortName
+;
+blocks
+these
+pop
+-
+ups
+you
+will
+see
+an
+icon
+on
+the
+status
+bar
 .
 "
 >
