Bug 557133 - Conflict between Home Page and Help access keys. r=dietrich
UltraBlame original commit: 38f96d215ccb44975d23d1a0015b0ee1704952ad

--- a/browser/locales/en-US/chrome/browser/preferences/main.dtd
+++ b/browser/locales/en-US/chrome/browser/preferences/main.dtd
@@ -79,7 +79,7 @@ time
 <
 !
 ENTITY
-location
+homepage
 .
 label
 "
@@ -91,11 +91,11 @@ Page
 <
 !
 ENTITY
-location
+homepage
 .
 accesskey
 "
-H
+P
 "
 >
 <
