Bug 591876 - Change the tooltip of utilities button. r=dtownsend, a=dtownsend
UltraBlame original commit: e71aa0367bfef90a6cd864350baf70c29b14e7ba

--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
@@ -172,6 +172,21 @@ I
 <
 !
 ENTITY
+toolsMenu
+.
+tooltip
+"
+Tools
+for
+all
+add
+-
+ons
+"
+>
+<
+!
+ENTITY
 cmd
 .
 back
@@ -473,44 +488,6 @@ label
 "
 Available
 Updates
-"
->
-<
-!
-ENTITY
-view
-.
-utilites
-.
-preferences
-.
-tooltip
-"
-Options
-for
-all
-add
--
-ons
-"
->
-<
-!
-ENTITY
-view
-.
-utilites
-.
-preferencesUnix
-.
-tooltip
-"
-Preferences
-for
-all
-add
--
-ons
 "
 >
 <
