Fixing bug 61098. Give users a way out of inifinite modal dialog loops. Original patch by Nochum Sossonko. r=jonassicking.cc a=beta7+
UltraBlame original commit: e036427942ff29f09aa0048920e373b00621a781

--- a/toolkit/locales/en-US/chrome/global/commonDialogs.properties
+++ b/toolkit/locales/en-US/chrome/global/commonDialogs.properties
@@ -65,6 +65,20 @@ at
 S
 says
 :
+ScriptDialogLabel
+=
+Prevent
+this
+page
+from
+creating
+additional
+dialogs
+ScriptDialogPreventTitle
+=
+Confirm
+Dialog
+Preference
 #
 LOCALIZATION
 NOTE
