--- a/browser/locales/en-US/chrome/browser/syncSetup.properties
+++ b/browser/locales/en-US/chrome/browser/syncSetup.properties
@@ -245,9 +245,38 @@ password
 %
 S
 passwords
+#
+LOCALIZATION
+NOTE
+(
 email
 .
 synckey
+.
+*
+)
+:
+"
+Firefox
+Sync
+"
+should
+match
+#
+&
+syncBrand
+.
+fullName
+.
+label
+;
+from
+syncBrand
+.
+dtd
+email
+.
+syncKey
 .
 subject
 =
@@ -257,36 +286,233 @@ Sync
 Key
 email
 .
-synckey
+syncKey
 .
-body
+label
 =
-Congratulations
-for
-signing
-up
-for
-Firefox
-Sync
-!
 Your
-secret
 Firefox
 Sync
-key
-is
+Key
+:
 %
 S
+email
 .
+syncKey
+.
+description
+=
+This
+key
+is
+used
+to
+decode
+the
+data
+in
+your
+Firefox
+Sync
+account
+.
+You
+will
+need
+to
+enter
+the
+key
+each
+time
+you
+configure
+Firefox
+Sync
+on
+a
+new
+computer
+or
+device
+.
+email
+.
+keepItSecret
+.
+label
+=
+Keep
+it
+secret
+!
+\
+u0020
+email
+.
+keepItSecret
+.
+description
+=
+Your
+Firefox
+Sync
+account
+is
+encrypted
+to
+protect
+your
+privacy
+.
+Without
+this
+key
+it
+would
+take
+years
+for
+anyone
+to
+decode
+your
+personal
+information
+.
+You
+are
+the
+only
+person
+who
+holds
+this
+key
+.
+This
+means
+you
+'
+re
+the
+only
+one
+who
+can
+access
+your
+Firefox
+Sync
+data
+.
+email
+.
+keepItSafe
+.
+label
+=
+Keep
+it
+safe
+!
+\
+u0020
+email
+.
+keepItSafe
+.
+description
+=
 Do
 not
 lose
+this
+key
+.
+We
+don
+'
+t
+keep
+a
+copy
+of
+your
+key
+(
+that
+wouldn
+'
+t
+be
+keeping
 it
+secret
+!
+)
+so
+we
+can
+'
+t
+help
+you
+recover
+it
+if
+it
+'
+s
+lost
+.
+You
+'
+ll
+need
+to
+use
+this
+key
+any
+time
+you
+connect
+a
+new
+computer
 or
-share
-with
-other
-people
+device
+to
+Firefox
+Sync
+.
+email
+.
+findOutMore
+.
+label
+=
+Find
+out
+more
+about
+Firefox
+Sync
+and
+your
+privacy
+at
+https
+:
+/
+/
+services
+.
+mozilla
+.
+com
 .
 save
 .
