Bug 593646 - rename 'Open in a New Window' to 'Move to New Window' and move it to a more sensible location [r=dao, ui-r=faaborg, a=gavin]
UltraBlame original commit: 16071f59d24700d651c0608ec1c40d9282cc2ef2

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -234,30 +234,6 @@ o
 >
 <
 !
-ENTITY
-openTabInNewWindow
-.
-label
-"
-Open
-in
-a
-New
-Window
-"
->
-<
-!
-ENTITY
-openTabInNewWindow
-.
-accesskey
-"
-W
-"
->
-<
-!
 -
 -
 LOCALIZATION
@@ -406,6 +382,29 @@ label
 "
 New
 Group
+"
+>
+<
+!
+ENTITY
+moveToNewWindow
+.
+label
+"
+Move
+to
+New
+Window
+"
+>
+<
+!
+ENTITY
+moveToNewWindow
+.
+accesskey
+"
+W
 "
 >
 <
