Bug 587518 - Relabel "Group Your Tabs..." menu item as "Tab Groups" and remove bogus caps from the "Group Your Tabs" tooltip. r=gavin ui-r=faaborg a=b
UltraBlame original commit: fc8d8dfee20fab523e1280d20c9ad71f07702d25

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -1391,7 +1391,7 @@ Home
 <
 !
 ENTITY
-tabViewButton2
+tabGroupsButton
 .
 label
 "
@@ -1402,13 +1402,13 @@ Groups
 <
 !
 ENTITY
-tabViewButton2
+tabGroupsButton
 .
 tooltip
 "
 Group
-Your
-Tabs
+your
+tabs
 "
 >
 <
@@ -2480,19 +2480,18 @@ V
 <
 !
 ENTITY
-showTabView2
+viewTabGroups
 .
 label
 "
-Group
-Your
-Tabs
+Tab
+Groups
 "
 >
 <
 !
 ENTITY
-showTabView2
+viewTabGroups
 .
 accesskey
 "
