--- a/security/manager/locales/en-US/chrome/pipnss/nsserrors.properties
+++ b/security/manager/locales/en-US/chrome/pipnss/nsserrors.properties
@@ -1353,6 +1353,24 @@ unexpected
 uncompressed
 record
 .
+SSL_ERROR_WEAK_SERVER_EPHEMERAL_DH_KEY
+=
+SSL
+received
+a
+weak
+ephemeral
+Diffie
+-
+Hellman
+key
+in
+Server
+Key
+Exchange
+handshake
+message
+.
 SEC_ERROR_IO
 =
 An
