Bug 573137: Upgrade to zlib 1.2.5.  The patch is contributed by Daniel Jeter II <djeterripleycable.net>.  r=wtc,joedrew. a=joedrew and blocking2.0:final
UltraBlame original commit: fb3a132de4ece5b2c6251d768b68ab008b243ce4

--- a/modules/zlib/src/FAQ
+++ b/modules/zlib/src/FAQ
@@ -19,11 +19,10 @@ http
 :
 /
 /
-www
-.
 zlib
 .
-org
+net
+/
 which
 may
 have
@@ -41,13 +40,9 @@ http
 :
 /
 /
-www
-.
-gzip
-.
-org
-/
 zlib
+.
+net
 /
 zlib_faq
 .
@@ -123,11 +118,10 @@ http
 :
 /
 /
-www
-.
 zlib
 .
-org
+net
+/
 .
 3
 .
@@ -148,33 +142,20 @@ http
 :
 /
 /
-www
+marknelson
 .
-dogma
-.
-net
+us
 /
-markn
+1997
 /
-articles
+01
 /
-zlibtool
+01
 /
-zlibtool
-.
-htm
-*
-contrib
-/
-visual
--
-basic
-.
-txt
-in
-the
 zlib
-distribution
+-
+engine
+/
 *
 win32
 /
@@ -201,6 +182,8 @@ the
 call
 of
 compress
+(
+)
 the
 length
 of
@@ -211,7 +194,7 @@ is
 equal
 to
 the
-total
+available
 size
 of
 the
@@ -363,6 +346,24 @@ returns
 with
 zero
 .
+See
+http
+:
+/
+/
+zlib
+.
+net
+/
+zlib_how
+.
+html
+for
+a
+heavily
+annotated
+example
+.
 6
 .
 Where
@@ -385,44 +386,6 @@ in
 zlib
 .
 h
-for
-the
-moment
-and
-Francis
-S
-.
-Lin
-has
-converted
-it
-to
-a
-web
-page
-zlib
-.
-html
-.
-Volunteers
-to
-transform
-this
-to
-Unix
--
-style
-man
-pages
-please
-contact
-us
-(
-zlib
-gzip
-.
-org
-)
 .
 Examples
 of
@@ -439,6 +402,11 @@ and
 minigzip
 .
 c
+with
+more
+in
+examples
+/
 .
 7
 .
@@ -804,6 +772,29 @@ link
 to
 it
 .
+You
+can
+check
+the
+version
+at
+the
+top
+of
+zlib
+.
+h
+or
+with
+the
+ZLIB_VERSION
+symbol
+defined
+in
+zlib
+.
+h
+.
 15
 .
 I
@@ -854,20 +845,6 @@ file
 Yes
 .
 See
-http
-:
-/
-/
-www
-.
-fastio
-.
-com
-/
-(
-ClibPDF
-)
-or
 http
 :
 /
@@ -1295,7 +1272,9 @@ default
 zlib
 '
 s
+*
 Init
+*
 functions
 allow
 for
@@ -1686,8 +1665,7 @@ a
 bit
 machine
 ?
-It
-should
+Yes
 .
 It
 has
@@ -1850,6 +1828,34 @@ significantly
 degrade
 compression
 .
+Alternatively
+you
+can
+scan
+a
+deflate
+stream
+once
+to
+generate
+an
+index
+and
+then
+use
+that
+index
+for
+random
+access
+.
+See
+examples
+/
+zran
+.
+c
+.
 29
 .
 Does
@@ -1864,52 +1870,58 @@ CICS
 etc
 .
 ?
-We
-don
-'
-t
-know
-for
-sure
-.
-We
+It
+has
+in
+the
+past
+but
+we
 have
+not
 heard
-occasional
-reports
 of
-success
-on
-these
-systems
+any
+recent
+evidence
+.
+There
+were
+working
+ports
+of
+zlib
+1
+.
+1
+.
+4
+to
+MVS
+but
+those
+links
+no
+longer
+work
 .
 If
 you
-do
-use
-it
-on
-one
+know
 of
+recent
+successful
+applications
+of
+zlib
+on
 these
+operating
+systems
 please
-provide
+let
 us
-with
-a
-report
-instructions
-and
-patches
-that
-we
-can
-reference
-when
-we
-get
-these
-questions
+know
 .
 Thanks
 .
@@ -2291,10 +2303,21 @@ a
 buffer
 overflow
 of
-a
-4K
+an
+8K
 string
 space
+(
+or
+other
+value
+as
+set
+by
+gzbuffer
+(
+)
+)
 other
 than
 the
@@ -2310,7 +2333,7 @@ output
 will
 not
 exceed
-4K
+8K
 .
 On
 the
@@ -2456,6 +2479,30 @@ double
 -
 free
 vulnerability
+and
+versions
+1
+.
+2
+.
+1
+and
+1
+.
+2
+.
+2
+were
+subject
+to
+an
+access
+exception
+when
+decompressing
+invalid
+compressed
+data
 .
 34
 .
@@ -2523,12 +2570,11 @@ http
 :
 /
 /
-www
-.
 zlib
 .
-org
+net
 /
+.
 35
 .
 I
@@ -2594,6 +2640,12 @@ compilers
 were
 downright
 silly
+as
+well
+as
+contradicted
+each
+other
 .
 So
 now
@@ -2691,6 +2743,28 @@ out
 the
 allocated
 memory
+.
+Even
+though
+the
+code
+was
+correct
+versions
+1
+.
+2
+.
+4
+and
+later
+was
+changed
+to
+not
+stimulate
+these
+checkers
 .
 37
 .
@@ -3061,6 +3135,203 @@ to
 implement
 .
 41
+.
+I
+'
+m
+having
+a
+problem
+with
+the
+zip
+functions
+in
+zlib
+can
+you
+help
+?
+There
+are
+no
+zip
+functions
+in
+zlib
+.
+You
+are
+probably
+using
+minizip
+by
+Giles
+Vollant
+which
+is
+found
+in
+the
+contrib
+directory
+of
+zlib
+.
+It
+is
+not
+part
+of
+zlib
+.
+In
+fact
+none
+of
+the
+stuff
+in
+contrib
+is
+part
+of
+zlib
+.
+The
+files
+in
+there
+are
+not
+supported
+by
+the
+zlib
+authors
+.
+You
+need
+to
+contact
+the
+authors
+of
+the
+respective
+contribution
+for
+help
+.
+42
+.
+The
+match
+.
+asm
+code
+in
+contrib
+is
+under
+the
+GNU
+General
+Public
+License
+.
+Since
+it
+'
+s
+part
+of
+zlib
+doesn
+'
+t
+that
+mean
+that
+all
+of
+zlib
+falls
+under
+the
+GNU
+GPL
+?
+No
+.
+The
+files
+in
+contrib
+are
+not
+part
+of
+zlib
+.
+They
+were
+contributed
+by
+other
+authors
+and
+are
+provided
+as
+a
+convenience
+to
+the
+user
+within
+the
+zlib
+distribution
+.
+Each
+item
+in
+contrib
+has
+its
+own
+license
+.
+43
+.
+Is
+zlib
+subject
+to
+export
+controls
+?
+What
+is
+its
+ECCN
+?
+zlib
+is
+not
+subject
+to
+export
+controls
+and
+so
+is
+classified
+as
+EAR99
+.
+44
 .
 Can
 you
