--- a/modules/zlib/src/README
+++ b/modules/zlib/src/README
@@ -7,7 +7,7 @@ zlib
 .
 2
 .
-3
+5
 is
 a
 general
@@ -81,38 +81,6 @@ gzip
 format
 )
 .
-These
-documents
-are
-also
-available
-in
-other
-formats
-from
-ftp
-:
-/
-/
-ftp
-.
-uu
-.
-net
-/
-graphics
-/
-png
-/
-documents
-/
-zlib
-/
-zdoc
--
-index
-.
-html
 All
 functions
 of
@@ -214,24 +182,10 @@ top
 of
 Makefile
 .
+in
+.
 In
 short
-"
-make
-test
-;
-make
-install
-"
-should
-work
-for
-most
-machines
-.
-For
-Unix
-:
 "
 .
 /
@@ -239,24 +193,40 @@ configure
 ;
 make
 test
-;
+"
+and
+if
+that
+goes
+well
+"
 make
 install
 "
+should
+work
+for
+most
+flavors
+of
+Unix
 .
 For
-MSDOS
+Windows
 use
 one
 of
 the
 special
 makefiles
-such
-as
-Makefile
-.
-msc
+in
+win32
+/
+or
+contrib
+/
+vstudio
+/
 .
 For
 VMS
@@ -303,24 +273,11 @@ http
 :
 /
 /
-www
-.
 zlib
 .
-org
-or
-http
-:
+net
 /
-/
-www
 .
-gzip
-.
-org
-/
-zlib
-/
 Before
 reporting
 a
@@ -364,13 +321,9 @@ http
 :
 /
 /
-www
-.
-gzip
-.
-org
-/
 zlib
+.
+net
 /
 zlib_faq
 .
@@ -414,24 +367,26 @@ the
 article
 is
 available
-in
+at
 http
 :
 /
 /
-dogma
+marknelson
 .
-net
+us
 /
-markn
+1997
 /
-articles
+01
 /
-zlibtool
+01
 /
-zlibtool
+zlib
+-
+engine
+/
 .
-htm
 The
 changes
 made
@@ -441,7 +396,7 @@ version
 .
 2
 .
-3
+5
 are
 documented
 in
@@ -457,22 +412,24 @@ are
 provided
 in
 directory
-"
 contrib
-"
+/
 .
-A
-Java
-implementation
-of
 zlib
 is
 available
 in
-the
 Java
-Development
-Kit
+using
+the
+java
+.
+util
+.
+zip
+package
+documented
+at
 http
 :
 /
@@ -483,45 +440,14 @@ sun
 .
 com
 /
-j2se
+developer
 /
-1
-.
-4
-.
-2
+technicalArticles
 /
-docs
+Programming
 /
-api
+compression
 /
-java
-/
-util
-/
-zip
-/
-package
--
-summary
-.
-html
-See
-the
-zlib
-home
-page
-http
-:
-/
-/
-www
-.
-zlib
-.
-org
-for
-details
 .
 A
 Perl
@@ -539,8 +465,8 @@ cpan
 org
 >
 is
-in
-the
+available
+at
 CPAN
 (
 Comprehensive
@@ -549,24 +475,27 @@ Archive
 Network
 )
 sites
+including
 http
 :
 /
 /
-www
+search
 .
 cpan
 .
 org
 /
-modules
+~
+pmqs
 /
-by
+IO
 -
-module
-/
 Compress
+-
+Zlib
 /
+.
 A
 Python
 interface
@@ -615,46 +544,25 @@ module
 zlib
 .
 html
-A
+.
 zlib
-binding
-for
-TCL
-written
-by
-Andreas
-Kupries
-<
-a
-.
-kupries
-westend
-.
-com
->
 is
-availlable
-at
+built
+into
+tcl
+:
 http
 :
 /
 /
-www
+wiki
 .
-oche
+tcl
 .
-de
+tk
 /
-~
-akupries
-/
-soft
-/
-trf
-/
-trf_zip
+4610
 .
-html
 An
 experimental
 package
@@ -870,12 +778,8 @@ not
 supported
 on
 RISCOS
+or
 BEOS
-and
-by
-some
-Mac
-compilers
 .
 -
 For
@@ -891,50 +795,6 @@ sourceforge
 .
 net
 /
--
-When
-building
-a
-shared
-i
-.
-e
-.
-dynamic
-library
-on
-Mac
-OS
-X
-the
-library
-must
-be
-installed
-before
-testing
-(
-do
-"
-make
-install
-"
-before
-"
-make
-test
-"
-)
-since
-the
-library
-location
-is
-specified
-in
-the
-library
-.
 Acknowledgments
 :
 The
@@ -993,7 +853,7 @@ C
 )
 1995
 -
-2004
+2010
 Jean
 -
 loup
