Bug 593125 - Reword offline error text in the content area message r=dolske a=blocking
UltraBlame original commit: e6f66ee57044b36fdf99ee36edc58b8db12f98a9

--- a/browser/locales/en-US/chrome/overrides/netError.dtd
+++ b/browser/locales/en-US/chrome/overrides/netError.dtd
@@ -462,7 +462,7 @@ mode
 ENTITY
 netOffline
 .
-longDesc
+longDesc2
 "
 <
 ul
@@ -479,10 +479,6 @@ Offline
 &
 quot
 ;
-in
-the
-File
-menu
 then
 try
 again
