--- a/dom/locales/en-US/chrome/netError.dtd
+++ b/dom/locales/en-US/chrome/netError.dtd
@@ -772,6 +772,78 @@ ul
 <
 !
 ENTITY
+netOffline
+.
+longDesc2
+"
+<
+p
+>
+The
+browser
+is
+operating
+in
+its
+offline
+mode
+and
+cannot
+connect
+to
+the
+requested
+item
+.
+<
+/
+p
+>
+<
+ul
+>
+<
+li
+>
+Is
+the
+computer
+connected
+to
+an
+active
+network
+?
+<
+/
+li
+>
+<
+li
+>
+Place
+the
+browser
+in
+online
+mode
+and
+try
+again
+.
+<
+/
+li
+>
+<
+/
+ul
+>
+"
+>
+<
+!
+ENTITY
 contentEncodingError
 .
 title
