Bug 597653 - Sync UI: Hard-coded column headers in Server Quota dialog. r=mconnor a=blocking-beta7
UltraBlame original commit: 72da933b17cef852531523fb516bdd39d90c5d53

--- a/browser/locales/en-US/chrome/browser/syncQuota.dtd
+++ b/browser/locales/en-US/chrome/browser/syncQuota.dtd
@@ -25,3 +25,27 @@ quota
 information
 "
 >
+<
+!
+ENTITY
+quota
+.
+typeColumn
+.
+label
+"
+Type
+"
+>
+<
+!
+ENTITY
+quota
+.
+sizeColumn
+.
+label
+"
+Size
+"
+>
