Strings for bug 596731. r=dao a=beltzner
UltraBlame original commit: 809f3ae9b07142dd05597c03e2c7f344dc37cdd4

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -1274,19 +1274,6 @@ Bar
 <
 !
 ENTITY
-feedButton
-.
-tooltip
-"
-Subscribe
-to
-this
-page
-"
->
-<
-!
-ENTITY
 printButton
 .
 label
@@ -1409,6 +1396,29 @@ tooltip
 Group
 your
 tabs
+"
+>
+<
+!
+ENTITY
+feedButton
+.
+label
+"
+Subscribe
+"
+>
+<
+!
+ENTITY
+feedButton
+.
+tooltip
+"
+Subscribe
+to
+this
+page
 "
 >
 <
