--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -2759,22 +2759,23 @@ Bookmarks
 <
 !
 ENTITY
+appMenuWebDeveloper
+.
+label
+"
+Web
+Developer
+"
+>
+<
+!
+ENTITY
 appMenuGettingStarted
 .
 label
 "
 Getting
 Started
-"
->
-<
-!
-ENTITY
-developerMenu
-.
-label
-"
-Developer
 "
 >
 <
