Bug 597502 - Web Console network inspector saves all network requests, causing Firefox to become unusably slow, r=sdwilsh, a=blocking2.0
UltraBlame original commit: 2709f62a9d9a1b46c269c364dc698b66da33fe16

--- a/toolkit/locales/en-US/chrome/global/headsUpDisplay.properties
+++ b/toolkit/locales/en-US/chrome/global/headsUpDisplay.properties
@@ -445,6 +445,20 @@ Inspect
 :
 %
 S
+saveBodies
+.
+label
+=
+Log
+Request
+and
+Response
+Bodies
+saveBodies
+.
+accesskey
+=
+L
 copyCmd
 .
 label
