Bug 542122 - Replace safe mode shortcut with keyboard modifier and menu command r=rs a=beta7+
UltraBlame original commit: 084a262560ebcf8319d78e1cb9cef7c83bacf82c

--- a/browser/locales/en-US/chrome/browser/baseMenuOverlay.dtd
+++ b/browser/locales/en-US/chrome/browser/baseMenuOverlay.dtd
@@ -208,6 +208,31 @@ commandkey
 <
 !
 ENTITY
+helpSafeMode
+.
+label
+"
+Restart
+with
+Add
+-
+ons
+Disabled
+"
+>
+<
+!
+ENTITY
+helpSafeMode
+.
+accesskey
+"
+R
+"
+>
+<
+!
+ENTITY
 helpReleaseNotes
 .
 label
