--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -2781,6 +2781,31 @@ Started
 <
 !
 ENTITY
+appMenuSafeMode
+.
+label
+"
+Restart
+with
+Add
+-
+ons
+Disabled
+"
+>
+<
+!
+ENTITY
+appMenuSafeMode
+.
+accesskey
+"
+R
+"
+>
+<
+!
+ENTITY
 openCmd
 .
 commandkey
