--- a/browser/locales/en-US/chrome/browser/browser.properties
+++ b/browser/locales/en-US/chrome/browser/browser.properties
@@ -2903,6 +2903,32 @@ default
 theme
 .
 #
+safeModeRestart
+safeModeRestartPromptTitle
+=
+Restart
+with
+Add
+-
+ons
+Disabled
+safeModeRestartPromptMessage
+=
+Are
+you
+sure
+you
+want
+to
+disable
+all
+add
+-
+ons
+and
+restart
+?
+#
 LOCALIZATION
 NOTE
 (
