Bug 597304. Change wording for manual cache size override. r=gavin a=beta7
UltraBlame original commit: 0e43f7a9d7a823b63533fedb1a6f66d61520b6da

--- a/browser/locales/en-US/chrome/browser/preferences/advanced.dtd
+++ b/browser/locales/en-US/chrome/browser/preferences/advanced.dtd
@@ -394,11 +394,11 @@ NOTE
 :
 The
 entities
-useCacheBefore
+limitCacheSizeBefore
 .
 label
 and
-useCacheAfter
+limitCacheSizeAfter
 .
 label
 appear
@@ -412,7 +412,7 @@ as
 follows
 :
 &
-useCacheBefore
+limitCacheSizeBefore
 .
 label
 [
@@ -424,7 +424,7 @@ in
 MB
 ]
 &
-useCacheAfter
+limitCacheSizeAfter
 .
 label
 ;
@@ -434,38 +434,35 @@ label
 <
 !
 ENTITY
-useCacheBefore
+limitCacheSizeBefore
 .
 label
 "
-Use
-up
+Limit
+cache
 to
 "
 >
 <
 !
 ENTITY
-useCacheBefore
+limitCacheSizeBefore
 .
 accesskey
 "
-U
+L
 "
 >
 <
 !
 ENTITY
-useCacheAfter
+limitCacheSizeAfter
 .
 label
 "
 MB
 of
 space
-for
-the
-cache
 "
 >
 <
@@ -492,30 +489,24 @@ C
 <
 !
 ENTITY
-smartSizeCache
+overrideSmartCacheSize
 .
 label
 "
-Let
-&
-brandShortName
-;
-manage
-the
-size
-of
-my
+Override
+automatic
 cache
+management
 "
 >
 <
 !
 ENTITY
-smartSizeCache
+overrideSmartCacheSize
 .
 accesskey
 "
-L
+O
 "
 >
 <
