Bug 593125 followup: tweak netOffline error text to specify that "Work Offline" is a menu item, r=Pike, a=me
UltraBlame original commit: 17c0971e73804b3d42eb85ff90d52e21494ee74c

--- a/browser/locales/en-US/chrome/overrides/netError.dtd
+++ b/browser/locales/en-US/chrome/overrides/netError.dtd
@@ -459,10 +459,65 @@ mode
 >
 <
 !
+-
+-
+LOCALIZATION
+NOTE
+(
+netOffline
+.
+overrideLongDesc
+)
+-
+This
+string
+should
+indicate
+that
+"
+Work
+Offline
+"
+is
+a
+menu
+item
+without
+being
+too
+specific
+since
+it
+could
+be
+in
+either
+the
+normal
+menu
+(
+Mac
+/
+Linux
+)
+or
+the
+Firefox
+button
+menu
+(
+Windows
+)
+.
+-
+-
+>
+<
+!
 ENTITY
 netOffline
 .
-longDesc2
+overrideLongDesc
 "
 <
 ul
@@ -471,6 +526,7 @@ ul
 li
 >
 Uncheck
+the
 &
 quot
 ;
@@ -479,6 +535,8 @@ Offline
 &
 quot
 ;
+menu
+item
 then
 try
 again
