Bug 598529 - Improve form validation messages with Alex Faaborg recommandations. r=sicking ui-r=limi a=blocking-beta7
UltraBlame original commit: ad2288d1b896e7d7b45940ca82fc9335c769a8bf

--- a/dom/locales/en-US/chrome/dom/dom.properties
+++ b/dom/locales/en-US/chrome/dom/dom.properties
@@ -992,116 +992,108 @@ script
 was
 ignored
 .
-ElementSuffersFromBeingTooLong
+FormValidationTextTooLong
 =
-The
+Please
+shorten
+this
 text
-is
-too
-long
-.
-It
-is
+to
 %
 S
 characters
-long
-and
-the
-limit
-is
+or
+less
+(
+you
+are
+currently
+using
 %
 S
+characters
+)
 .
-TextElementSuffersFromBeingMissing
+FormValidationValueMissing
 =
-This
-field
-is
-mandatory
-you
-have
-to
+Please
 fill
-it
+out
+this
+field
 .
-CheckboxElementSuffersFromBeingMissing
+FormValidationCheckboxMissing
 =
-This
-checkbox
-is
-mandatory
-you
-have
-to
+Please
 check
-it
-.
-RadioElementSuffersFromBeingMissing
-=
-You
-have
+this
+box
+if
+you
+want
 to
+proceed
+.
+FormValidationRadioMissing
+=
+Please
 select
 one
 of
 these
 options
 .
-FileElementSuffersFromBeingMissing
+FormValidationFileMissing
 =
-You
-have
-to
+Please
 select
 a
 file
 .
-ElementSuffersFromInvalidEmail
+FormValidationSelectMissing
 =
-The
-entered
+Please
+select
+an
+item
+in
+the
+list
+.
+FormValidationInvalidEmail
+=
+Please
+enter
+an
 email
 address
-is
-not
-valid
 .
-ElementSuffersFromInvalidURL
+FormValidationInvalidURL
 =
-The
-entered
+Please
+enter
+a
 URL
-is
-not
-valid
 .
-ElementSuffersFromPatternMismatch
+FormValidationPatternMismatch
 =
-The
-field
-value
-is
-not
-in
+Please
+match
 the
 requested
 format
 .
-ElementSuffersFromPatternMismatchWithTitle
+FormValidationPatternMismatchWithTitle
 =
-The
-field
-value
-is
-not
-in
+Please
+match
 the
 requested
 format
-.
+:
 %
 S
+.
 UseOfDocumentWidthWarning
 =
 Non
