--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -758,18 +758,20 @@ Items
 <
 !
 ENTITY
-taskbarCmd
+addonBarCmd
 .
 label
 "
-Status
+Add
+-
+on
 Bar
 "
 >
 <
 !
 ENTITY
-taskbarCmd
+addonBarCmd
 .
 accesskey
 "
