Bug 598944 - Point users at status page when we hit sync delay/503s [r=mconnor]
UltraBlame original commit: f165e456e04d5c49843e4218feb41fdbcb14c272

--- a/services/sync/locales/en-US/sync.properties
+++ b/services/sync/locales/en-US/sync.properties
@@ -347,6 +347,25 @@ error
 .
 sync
 .
+serverStatusButton
+.
+label
+=
+Server
+Status
+error
+.
+sync
+.
+serverStatusButton
+.
+accesskey
+=
+V
+error
+.
+sync
+.
 needUpdate
 .
 description
