--- a/browser/locales/en-US/chrome/browser/syncSetup.dtd
+++ b/browser/locales/en-US/chrome/browser/syncSetup.dtd
@@ -622,6 +622,32 @@ Generate
 <
 !
 ENTITY
+syncKeyStrength
+.
+label
+"
+Strength
+:
+"
+>
+<
+!
+ENTITY
+syncKeyHelp
+.
+label
+"
+What
+does
+the
+strength
+mean
+?
+"
+>
+<
+!
+ENTITY
 syncKeyBackup
 .
 description
