Strings - Bug 596813 - Check for updates inside the About window without opening a new window. r=dtownsend, ui-r=beltzner, a=blocking2.0-beta7
UltraBlame original commit: 7cd8c313dfc5d9651bf34494a521fb1f8f6e1ea5

--- a/browser/locales/en-US/chrome/browser/browser.properties
+++ b/browser/locales/en-US/chrome/browser/browser.properties
@@ -1361,12 +1361,11 @@ the
 following
 update
 buttons
-and
 labels
 will
 only
-#
 be
+#
 displayed
 one
 at
@@ -1379,49 +1378,45 @@ a
 button
 is
 displayed
-no
-other
-buttons
-or
-#
-labels
+nothing
+else
 will
+#
 be
 displayed
-and
-if
-a
-label
-is
-displayed
-no
-other
-buttons
-or
-#
-labels
-will
-be
-displayed
+alongside
+of
+the
+button
 .
-They
-will
-be
-placed
+The
+button
+when
+displayed
+is
+located
+#
 directly
 under
 the
 Firefox
-#
 version
 in
 the
 about
 dialog
+(
+see
+bug
+596813
+for
+#
+screenshots
+)
 .
 update
 .
-checkButton
+checkInsideButton
 .
 label
 =
@@ -1430,7 +1425,7 @@ for
 Updates
 update
 .
-checkButton
+checkInsideButton
 .
 accesskey
 =
@@ -1528,92 +1523,6 @@ upgradeButton
 accesskey
 =
 U
-#
-Check
-for
-Updates
-in
-the
-About
-Dialog
--
-status
-labels
-update
-.
-checkingForUpdate
-.
-label
-=
-Checking
-for
-updates
-update
-.
-checkingAddonCompat
-.
-label
-=
-Checking
-add
--
-on
-compatibility
-update
-.
-noUpdateFound
-.
-label
-=
-This
-is
-the
-latest
-available
-version
-#
-LOCALIZATION
-NOTE
-(
-update
-.
-downloading
-)
-is
-the
-"
-em
-dash
-"
-(
-long
-dash
-)
-#
-%
-S
-is
-the
-amount
-download
-#
-examples
-:
-Downloading
-update
-111
-KB
-of
-13
-MB
-update
-.
-downloading
-=
-Downloading
-update
-%
-S
 #
 RSS
 Pretty
