Bug 592183 - Change Panorama key combination to ctrl/cmd+E, r=gavin, ui-r=beltzner, a=blocking
UltraBlame original commit: 54f9c70892697e6e2fd370ac41ed0d8e91909c1e

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -2913,13 +2913,22 @@ binding
 )
 Mac
 :
-Ctrl
+Cmd
 +
 K
 (
 cross
 platform
 binding
+)
+Cmd
++
+Opt
++
+F
+(
+platform
+convention
 )
 Win
 :
@@ -2930,13 +2939,6 @@ K
 cross
 platform
 binding
-)
-Ctrl
-+
-E
-(
-IE
-compat
 )
 We
 support
@@ -3038,21 +3040,6 @@ switch
 to
 Linux
 .
-Do
-*
-not
-*
-tamper
-with
-these
-values
-without
-talking
-to
-ben
-mozilla
-.
-org
 -
 -
 >
@@ -3069,21 +3056,21 @@ k
 <
 !
 ENTITY
-searchFocus
-.
-commandkey2
-"
-e
-"
->
-<
-!
-ENTITY
 searchFocusUnix
 .
 commandkey
 "
 j
+"
+>
+<
+!
+ENTITY
+tabView
+.
+commandkey
+"
+e
 "
 >
 <
