Bug 598452: add access key to "Clear Console" button, r=gavin, a=blocking
UltraBlame original commit: 7a46ad54e252402433135d24abd5ef17099f1061

--- a/toolkit/locales/en-US/chrome/global/headsUpDisplay.properties
+++ b/toolkit/locales/en-US/chrome/global/headsUpDisplay.properties
@@ -176,10 +176,17 @@ localConsole
 =
 Local
 Console
-itemClear
+clearConsoleCmd
+.
+label
 =
 Clear
 Console
+clearConsoleCmd
+.
+accesskey
+=
+e
 stringFilter
 =
 Filter
