--- a/browser/locales/en-US/chrome/browser/syncSetup.properties
+++ b/browser/locales/en-US/chrome/browser/syncSetup.properties
@@ -85,19 +85,45 @@ en
 docs
 /
 Localization_and_Plurals
+#
+#
+1
+is
+the
+number
+of
+additional
+clients
+(
+was
+%
+S
+for
+a
+short
+while
+use
+#
+1
+instead
+even
+if
+both
+work
+)
 additionalClientCount
 .
 label
 =
 and
-%
-S
+#
+1
 additional
 device
 ;
 and
-%
-S
+#
+1
 additional
 devices
 #
@@ -136,16 +162,41 @@ en
 docs
 /
 Localization_and_Plurals
+#
+#
+1
+is
+the
+number
+of
+bookmarks
+(
+was
+%
+S
+for
+a
+short
+while
+use
+#
+1
+instead
+even
+if
+both
+work
+)
 bookmarksCount
 .
 label
 =
-%
-S
+#
+1
 bookmark
 ;
-%
-S
+#
+1
 bookmarks
 #
 LOCALIZATION
@@ -183,18 +234,43 @@ en
 docs
 /
 Localization_and_Plurals
+#
+#
+1
+is
+the
+number
+of
+days
+(
+was
+%
+S
+for
+a
+short
+while
+use
+#
+1
+instead
+even
+if
+both
+work
+)
 historyDaysCount
 .
 label
 =
-%
-S
+#
+1
 day
 of
 history
 ;
-%
-S
+#
+1
 days
 of
 history
@@ -234,16 +310,41 @@ en
 docs
 /
 Localization_and_Plurals
+#
+#
+1
+is
+the
+number
+of
+passwords
+(
+was
+%
+S
+for
+a
+short
+while
+use
+#
+1
+instead
+even
+if
+both
+work
+)
 passwordsCount
 .
 label
 =
-%
-S
+#
+1
 password
 ;
-%
-S
+#
+1
 passwords
 save
 .
