Bug 570012: Show download progress when installing new add-ons (strings only). r=gavin a=strings
UltraBlame original commit: 0b62fa6416d92bf7ff387b339b382a78c30eac01

--- a/browser/locales/en-US/chrome/browser/browser.properties
+++ b/browser/locales/en-US/chrome/browser/browser.properties
@@ -266,6 +266,105 @@ n
 LOCALIZATION
 NOTE
 (
+addonDownloading
+addonDownloadCancelled
+addonDownloadRestart
+)
+:
+#
+Semi
+-
+colon
+list
+of
+plural
+forms
+.
+See
+:
+#
+http
+:
+/
+/
+developer
+.
+mozilla
+.
+org
+/
+en
+/
+docs
+/
+Localization_and_Plurals
+#
+Also
+see
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+570012
+for
+mockups
+addonDownloading
+=
+Add
+-
+on
+downloading
+;
+Add
+-
+ons
+downloading
+addonDownloadCancelled
+=
+Add
+-
+on
+download
+cancelled
+.
+;
+Add
+-
+on
+downloads
+cancelled
+.
+addonDownloadRestart
+=
+Restart
+Download
+;
+Restart
+Downloads
+addonDownloadRestart
+.
+accessKey
+=
+R
+addonDownloadCancelTooltip
+=
+Cancel
+#
+LOCALIZATION
+NOTE
+(
 addonsInstalled
 addonsInstalledNeedsRestart
 )
