Bug 531881 - Improve crash reporter UI around the mail address r=beltzner a=blocking-beta7
UltraBlame original commit: c542dbce104d6b693aa7d13de121fe1f3f95a27f

--- a/toolkit/locales/en-US/crashreporter/crashreporter.ini
+++ b/toolkit/locales/en-US/crashreporter/crashreporter.ini
@@ -378,15 +378,17 @@ page
 I
 was
 on
-CheckSendEmail
+CheckAllowEmail
 =
-Email
+Allow
+%
+s
+to
+contact
 me
-when
-more
-information
-is
-available
+about
+this
+report
 EmailGrayText
 =
 Enter
