Bug 601143: Remove brandname from new strings.
UltraBlame original commit: 1bbc1bc4d118691f13528889b52ff9e4a3e60ec2

--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
@@ -1285,7 +1285,7 @@ ons
 ENTITY
 discover
 .
-description
+description2
 "
 Add
 -
@@ -1296,7 +1296,9 @@ that
 let
 you
 personalize
-Firefox
+&
+brandShortName
+;
 with
 extra
 functionality
@@ -1318,7 +1320,9 @@ themed
 look
 to
 make
-Firefox
+&
+brandShortName
+;
 your
 own
 .
