Bug 592900 - Update the bookmarks menu from the nav toolbar to match changes in the Firefox menu. r=dolske a=blocking
UltraBlame original commit: 9a00cdcdb86936c0984a8ffd0df77d8dc8c381eb

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -1504,6 +1504,19 @@ bookmarks
 <
 !
 ENTITY
+bookmarksMenuButton
+.
+unsorted
+.
+label
+"
+Unsorted
+Bookmarks
+"
+>
+<
+!
+ENTITY
 viewBookmarksSidebar
 .
 label
