--- a/toolkit/locales/en-US/chrome/mozapps/update/updates.dtd
+++ b/toolkit/locales/en-US/chrome/mozapps/update/updates.dtd
@@ -220,6 +220,36 @@ computer
 <
 !
 ENTITY
+manualUpdate
+.
+space
+.
+desc
+"
+A
+recommended
+security
+and
+stability
+update
+is
+available
+but
+you
+do
+not
+have
+enough
+space
+to
+install
+it
+.
+"
+>
+<
+!
+ENTITY
 manualUpdateGetMsg
 .
 label
