Bug 967895 - Prompt (w/ Site Permission) before allowing content to extract canvas data (Tor 6253). r=johannh
MozReview-Commit-ID: 91eeagGmUXv

UltraBlame original commit: 0a482229bed6e15ac5c6743a679beba5fc4ea14f

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -2260,6 +2260,21 @@ panel
 ENTITY
 urlbar
 .
+canvasNotificationAnchor
+.
+tooltip
+"
+Manage
+canvas
+extraction
+permission
+"
+>
+<
+!
+ENTITY
+urlbar
+.
 indexedDBNotificationAnchor
 .
 tooltip
